--- a/style.css
+++ b/style.css
@@ -1,3 +1,43 @@
 html {
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 100%;
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  padding: 1rem 1rem;
+
+  line-height: 1.3;
+  font-family: Helvetica, Arial, sans-serif;
+  background-color: #d4f1f4;
+}
+
+h4 {
+  font-size: inherit;
+  color: #05445e;
+  margin: 1rem 0 0.5rem 0;
+}
+
+#test-container {
+  padding: 0 1rem 0 1rem;
+  margin: 1rem 0;
+  max-width: 600px;
+}
+
+button {
+  font: inherit;
+  font-weight: bold;
+  min-width: 170px;
+  padding: 0.2rem 1rem;
+  margin-right: 1rem;
+}
+
+input[type="checkbox"] {
+  margin: 0 0.5rem 0.5rem 1.1rem;
 }
